fix: minor fix (z-index deleted)

--- a/main.css
+++ b/main.css
@@ -682,7 +682,6 @@ input[type="radio"].visually-hidden {
 
 .controls__list {
   position: relative;
-  z-index: 9;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
